kubernetes/backend.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: drinking-game
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      volumes:
        - name: backend-storage
          persistentVolumeClaim:
            claimName: backend
      containers:
      - name: backend
        image: registry.localhost/game
        imagePullPolicy: Always

        resources:
          limits:
            memory: 512Mi
            cpu: 350m
          requests:
            memory: 256Mi
            cpu: 200m
        
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 5

        readinessProbe:
          httpGet:
            path: /ready
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 5

        ports:
        - containerPort: 5000
        
        volumeMounts:
        - mountPath: /etc/backend
          name: backend-storage

---

apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: drinking-game
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 5000
