kubernetes/mongo.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name:  mongo
  labels:
    app: drinking-game
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  mongo
  template:
    metadata:
      labels:
        app:  mongo
    spec:
      volumes:
        - name:  mongo-pv-storage
          persistentVolumeClaim:
            claimName:  mongo-pvc
      containers:
      - name:  mongo
        image: mongo
        imagePullPolicy: Always
        
        resources:
          limits:
            memory: 1024Mi
            cpu: 500m
          requests:
            memory: 256Mi
            cpu: 150m

        ports:
        - containerPort: 27017
        volumeMounts:
        - mountPath: /data/db
          name:  mongo-pv-storage

---

apiVersion: v1
kind: Service
metadata:
  name:  mongo-svc
  labels:
    app: drinking-game
spec:
  selector:
    app:  mongo
  ports:
  - port: 27017
    targetPort: 27017
