kubernetes/nginx.yaml
              
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
            - key: default.conf.template
              path: default.conf.template

      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/templates
          readOnly: true

---

apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: drinking-game
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
