kubernetes/registry.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name:  registry
  labels:
    app: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  registry
  template:
    metadata:
      labels:
        app:  registry
    spec:
      volumes:
        - name:  registry-data
          persistentVolumeClaim:
            claimName:  registry-data
        - name:  registry-auth
          persistentVolumeClaim:
            claimName:  registry-auth
      containers:
      - name: registry
        image: docker.io/library/registry:2
        imagePullPolicy: Always
        
        resources:
          limits:
            memory: 256Mi
            cpu: 300m
          requests:
            memory: 128Mi
            cpu: 150m

        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: /var/lib/registry
          name:  registry-data
        - mountPath: /auth
          name: registry-auth

---

apiVersion: v1
kind: Service
metadata:
  name:  registry
  labels:
    app: registry
spec:
  selector:
    app:  registry
  ports:
  - port: 80
    targetPort: 5000
