kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bifrost-ingress
  annotations:
    # ssl certificate
    cert-manager.io/issuer: prod-issuer
    cert-manager.io/issuer-kind: OriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
    
spec:
  rules:
  - host: game.thehuginn.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: svelte-frontend
            port: 
              number: 80
              
  - host: registry.thehuginn.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: registry
            port: 
              number: 80
              
  - host: registry.localhost
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: registry
            port:
              number: 80
          
  tls:
    - hosts:
        - thehuginn.com
        - registry.thehuginn.com
        - game.thehuginn.com
      secretName: thehuginn-com-tls
